fix(display): fix scrollbars without overflow.

--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@
     border-radius: 15px;
     padding: 5px;
     font-size: 60px;
-    overflow: scroll;
+    overflow: auto;
     flex: 1 1 0;
     line-height: 100%;
 }
